<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/setupGpFragment"
    tools:context="com.bondhan.research.main.SetupGpSubFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/CardProfileTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profiles_available" />

                <Spinner
                    android:id="@+id/cardProfileListSpinner"
                    style="@style/EditTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/CardProfileNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_name" />

                <EditText
                    android:id="@+id/CardNameTextEdit"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:text="@string/gp_card" />

            </LinearLayout>


            <TextView
                android:id="@+id/spacer"
                android:layout_width="fill_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/CardManagerAIDTxtView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_manager_aid_tv" />

                <EditText
                    android:id="@+id/cmAidEditText"
                    style="@style/EditTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:digits="0123456789ABCDEF"
                    android:inputType="textCapCharacters"
                    android:text="@string/default_cm_aid" />

                <Button
                    android:id="@+id/searchCmBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Search"/>
            </LinearLayout>

            <TextView
                android:id="@id/spacer"
                android:layout_width="fill_parent"
                android:layout_height="1dp" />

            <TextView
                android:id="@+id/kmcTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/global_platform_keys" />


            <TextView
                android:id="@id/spacer"
                android:layout_width="fill_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/kmcAcTextView"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/kmc_ac" />

                <EditText
                    android:id="@+id/kmcAcTextEdit"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789ABCDEF"
                    android:inputType="textCapCharacters"
                    android:text="@string/default_gp_key_value" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/kmcMacTextView"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/kmc_mac" />

                <EditText
                    android:id="@+id/kmcMacTextEdit"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789ABCDEF"
                    android:inputType="textCapCharacters"
                    android:text="@string/default_gp_key_value" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/kmcDekTextView"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:text="@string/kmc_dek" />

                <EditText
                    android:id="@+id/kmcDekTextEdit"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789ABCDEF"
                    android:inputType="textCapCharacters"
                    android:text="@string/default_gp_key_value" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/keyDerivationModeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/key_derivation_mode" />

                <Spinner
                    android:id="@+id/kdvModeSpinner"
                    style="@style/EditTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp" />
            </LinearLayout>

            <TextView
                android:id="@id/spacer"
                android:layout_width="fill_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ScpModeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/scp_mode_tv" />

                <Spinner
                    android:id="@+id/scpModeSpinner"
                    style="@style/EditTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp" />

            </LinearLayout>

            <TextView
                android:id="@id/spacer"
                android:layout_width="fill_parent"
                android:layout_height="1dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ApduModeTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apdu_mode_tv" />

                <Spinner
                    android:id="@+id/apduModeSpinner"
                    style="@style/EditTextStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="100dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/updateBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update" />

                <Button
                    android:id="@+id/saveAsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save_as" />

                <Button
                    android:id="@+id/deleteBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</FrameLayout>
